Bug 139040 - BASE: Open two same report when press "enter" key on report name
Summary: BASE: Open two same report when press "enter" key on report name
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-12-18 15:48 UTC by Alex Chernous
Modified: 2021-01-19 18:14 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Chernous 2020-12-18 15:48:47 UTC
Description:
If I select report name in 'Reports' tab on main window and press [ENTER] key on keyboard then two same report files will be opened.

Steps to Reproduce:
1. Create new database document;
2. Create table from some default template;
3. Create report based on table;
4. Select report name in 'Reports' tab on main window;
5. Press [ENTER] key on keyboard;

Actual Results:
Will be open two same report files.

Expected Results:
Will be open one report file.

Note:
If click on selected report name by mouse button or choice context menu, then will be open one report as expected.

Version: 7.0.4.2
Build ID: dcf040e67528d9187c66b2379df5ea4407429775
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ru-RU (ru_RU.UTF-8); ИП: ru-RU
Calc: threaded
Comment 1 Robert Großkopf 2020-12-18 19:11:21 UTC
Could confirm the buggy behavior with LO 7.0.4.1 and gtk3, also kf5. Appears also with LO 7.0.0.3. 
Bug doesn't appear in LO 6.3.5.2, also LO 6.4.6.2. So it seems to be a regression since LO 7.0.

All tested with OpenSUSE 15.1 64bit rpm Linux
Comment 2 Aron Budea 2021-01-02 08:10:30 UTC
Bibisected to the following commit using repo bibisect-linux-64-7.0. Bug 133744 was bibisected to the same commit, though it's a completely different issue. Adding CC: to Caolán McNamara.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=7bd3f4a0724b11c18d45937078e8c2968e2b6d7f
author		Caolán McNamara <caolanm@redhat.com>	2020-05-26 16:17:59 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-05-26 20:23:16 +0200

emit activate-row in vcl treeview on return
Comment 3 Caolán McNamara 2021-01-18 12:33:49 UTC
the reported case seems to be ok in 7-1 again
Comment 4 Caolán McNamara 2021-01-18 14:07:30 UTC
already fixed in master and 7-1, fix for 7-0 in gerrit as https://gerrit.libreoffice.org/c/core/+/109550
Comment 5 Commit Notification 2021-01-19 14:54:18 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/869bbe7419e15196ea8f28ce3a3d5ef5c8dd3a6f

tdf#139040 return already activates double-click handler for row

It will be available in 7.0.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Alex Chernous 2021-01-19 18:14:02 UTC
Confirm in
Version: 7.0.5.0.0+
Build ID: 008dc7a128c1f49093eefadc83c125c3c6b1bb00
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-0, Time: 2021-01-18_17:16:18
Calc: threaded

Fixed in
Version: 7.1.1.0.0+ / LibreOffice Community
Build ID: ef336f71780eb62cfdfe0091cc0656622884993b
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-1, Time: 2021-01-18_05:27:42
Calc: threaded