tdf#139040 return already activates double-click handler for row

Change-Id: I95f6c5eaaa28eeb327b57ec25fff2899fbfd91a8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/109550
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Jenkins